oxiplate/tests/crates/unreachable/tests/broken/invalid-escaper-extension.stderr
error: Internal Oxiplate error. Unregistered file extension causing `EscaperNotFound` error.
 --> tests/broken/invalid-escaper-extension.rs:4:14
  |
4 | #[oxiplate = "template.htm"]
  |              ^^^^^^^^^^^^^^
  |
  = help: Extension found: htm
  = help: Registered escaper groups: html, json, md
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Unregistered+file+extension+causing+%60EscaperNotFound%60+error
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/invalid-escaper-extension.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0599]: no method named `render` found for struct `Data` in the current scope
 --> tests/broken/invalid-escaper-extension.rs:8:10
  |
5 | struct Data;
  | ----------- method `render` not found for this struct
...
8 |     Data.render().unwrap();
  |          ^^^^^^ method not found in `Data`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `render`, perhaps you need to implement it:
          candidate #1: `Render`
